[gd_scene load_steps=9 format=2]

[ext_resource path="res://Intro.gd" type="Script" id=1]
[ext_resource path="res://assets/assets_new/enter-war-room.ogv" type="VideoStream" id=2]
[ext_resource path="res://assets/assets_new/startup-intro.ogv" type="VideoStream" id=3]
[ext_resource path="res://assets/assets_new/intro/intro/intro_00247.png" type="Texture" id=4]
[ext_resource path="res://assets/assets_new/enterexitbuttons/startbuttons-04.png" type="Texture" id=5]
[ext_resource path="res://assets/assets_new/enterexitbuttons/startbuttons-02.png" type="Texture" id=6]
[ext_resource path="res://assets/assets_new/enterexitbuttons/startbuttons-03.png" type="Texture" id=7]
[ext_resource path="res://assets/assets_new/enterexitbuttons/startbuttons-01.png" type="Texture" id=8]

[node name="Intro" type="Node"]

script = ExtResource( 1 )

[node name="enterwar" type="VideoPlayer" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
audio_track = 0
stream = ExtResource( 2 )
volume_db = 0.0
autoplay = false
paused = false
expand = true
buffering_msec = 500
bus = "Master"
_sections_unfolded = [ "Rect" ]

[node name="bootup" type="VideoPlayer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
audio_track = 0
stream = ExtResource( 3 )
volume_db = 0.0
autoplay = true
paused = false
expand = true
buffering_msec = 500
bus = "Master"
_sections_unfolded = [ "Rect" ]

[node name="Sprite" type="Sprite" parent="." index="2"]

visible = false
texture = ExtResource( 4 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="exit" type="TextureButton" parent="." index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 974.0
margin_top = 626.0
margin_right = 1500.0
margin_bottom = 855.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="enter" type="TextureButton" parent="." index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 424.0
margin_top = 626.0
margin_right = 950.0
margin_bottom = 855.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="bootuptimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 8.2
one_shot = true
autostart = true

[node name="entertimer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 7.2
one_shot = true
autostart = true

[node name="microtransition" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="transitiontomaintimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 7.9
one_shot = true
autostart = false

[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]

[connection signal="pressed" from="enter" to="." method="_on_enter_pressed"]

[connection signal="timeout" from="bootuptimer" to="." method="_on_bootuptimer_timeout"]

[connection signal="timeout" from="entertimer" to="." method="_on_entertimer_timeout"]

[connection signal="timeout" from="microtransition" to="." method="_on_microtransition_timeout"]

[connection signal="timeout" from="transitiontomaintimer" to="." method="_on_transitiontomaintimer_timeout"]


